--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.0.1",
     "next": "12.3.1",
     "next-sanity": "^1.0.0",
     "react": "18.2.0",
