added google maps api

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_SANITY_DATASET=production
 NEXT_PUBLIC_SANITY_PROJECT_ID=qcar0xi8
+googlePlacesAPI=AIzaSyBMZB1JGagSvYlTgsJ4Cts7ZscGJzSxkZI
