--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.13.1",
     "@sanity/image-url": "^1.0.1",
     "next": "12.3.1",
     "next-sanity": "^1.0.0",
